updates to swagger and unit tests
